Avoid page break inside graphs/examples and allow for background colors for proper rendering of Dash DAQ components.

--- a/assets/pdf-docs.css
+++ b/assets/pdf-docs.css
@@ -4,9 +4,13 @@
   }
   #pdf-docs, #pdf-docs * {
       visibility: visible;
+      -webkit-print-color-adjust: exact;
   }
   @page {
       margin: 1.25in; 
+  }
+  .example-container {
+      page-break-inside: avoid;
   }
 }
 
